--- a/app/assets/stylesheets/shoppe/application.scss
+++ b/app/assets/stylesheets/shoppe/application.scss
@@ -19,19 +19,9 @@ nav.sidebar {
 	bottom:0;
 	header.logo {
 		height:57px;
-		background:image-url('shoppe/logo.svg') #9AC835 no-repeat 22px 25px;
-		background-size:45px;
-		padding-left:80px;
-		padding-top:28px;
-		h1 a {
-			display:block;
-			width:72px;
-			height:16px;
-			background:image-url('shoppe/shoppe.svg') no-repeat;
-			background-size:72px 16px;
-			text-indent:-40000px;
-		}
-		p { color:#fff; font-size:0.9em; margin-top:4px; }
+		background:image-url('shoppe/hooked-logo-cropped.png') no-repeat;
+		background-size:205px;
+		padding-top:20px;
 	}
 
 	p.logged {
@@ -98,8 +88,8 @@ header.main {
 	//
 	// flashes
 	//
-	#flash-notice { background:#21a3e0; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
-	#flash-alert { background:#e04e21; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
+	#flash-notice { background:#4B8BF5; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
+	#flash-alert { background:#ED7878; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
 
 	//
 	// sub title
@@ -135,7 +125,7 @@ header.main {
 	// fieldset
 	//
 	fieldset {
-		border:1px solid #dce2eb;
+		border:1px solid #3BB479;
 		background:#fff;
 		padding-top:15px;
 		padding-bottom:25px;
@@ -279,7 +269,7 @@ header.main {
 				}
 			}
 		}
-		p.submit {margin:0; background:#fff; border:1px solid #dce2eb; padding:25px; }
+		p.submit {margin:0; background:#fff; border:1px solid #3BB479; padding:25px; }
 		p.submit .button {
 			margin-right:5px;
 			vertical-align: middle;
@@ -551,7 +541,7 @@ input.text, textarea.text {
   box-sizing: border-box;         /* Opera/IE 8+ */
 	font-size:1.1em;
 	font-family:$font;
-	&:focus { border-color:#9AC835; }
+	&:focus { border-color:#EFEFEF; }
 	&.short { width:100px;}
 }
 
@@ -591,7 +581,7 @@ table.data {
 	tbody tr.form {
 		td { background:#f2f6fb;}
 		input[type=text] { border:1px solid #CFD4DD; padding:5px;}
-		input[type=text]:focus { border-color:#9AC835;}
+		input[type=text]:focus { border-color:#3BB479;}
 		td.desc input[type=text] { width:95%;}
 		td.adjustment input[type=text] { width:50px; margin-right:5px;}
 	}
@@ -612,7 +602,7 @@ nav.pagination {
 		margin-right:3px;
 		color:#333;
 		background:#fff;
-		&.current { background:#9AC835; border-color:#7B9F26; color:#fff; font-weight:600; padding:5px 10px;}
+		&.current { background:#3BB479; border-color:#7B9F26; color:#fff; font-weight:600; padding:5px 10px;}
 		a {
 			padding:5px 10px;
 			display:inline-block;
