--- a/app/assets/stylesheets/shoppe/application.scss
+++ b/app/assets/stylesheets/shoppe/application.scss
@@ -88,8 +88,16 @@ header.main {
 	//
 	// flashes
 	//
-	#flash-notice { background:#4B8BF5; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
-	#flash-alert { background:#ED7878; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
+	#flash-notice { 
+		position: absolute;
+		top:85px;
+		width: 100%;
+		z-index: 100;
+		background:#4B8BF5; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
+	#flash-alert { 		position: absolute;
+		top:85px;
+		width: 100%;
+		z-index: 100;background:#ED7878; padding:15px 35px; color:#fff; font-size:1.2em; font-weight:bold;}
 
 	//
 	// sub title
