--- a/app/views/layouts/shoppe/application.html.erb
+++ b/app/views/layouts/shoppe/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= @page_title %> - Shoppe</title>
+    <title><%= @page_title %> - Shop</title>
     <%= stylesheet_link_tag 'shoppe/application' %>
     <%= javascript_include_tag 'shoppe/application' %>
     <%= csrf_meta_tags %>
