--- a/app/assets/stylesheets/shoppe/sub.scss
+++ b/app/assets/stylesheets/shoppe/sub.scss
@@ -12,11 +12,9 @@ body { font-family:$font; font-weight: normal; font-size: 100%; min-width:900px;
 @import 'variables';
 
 html.login {
-  background:image-url('shoppe/logo.svg') #40454D no-repeat center 100px;
-  background-size:70px;
 	
 	#flash-alert {
-		background:#C17391;
+		background:#E66B5C;
 		position:absolute;
 		top:0;
 		width:100%;
@@ -75,7 +73,6 @@ html.login {
       input {
         padding:7px;
         border:0;
-        border-radius:4px;
         border:1px solid #c0c6ce;
         width:275px;
         font-family:$font;
