--- a/app/views/shoppe/user_mailer/new_password.text.erb
+++ b/app/views/shoppe/user_mailer/new_password.text.erb
@@ -4,6 +4,4 @@ Your new password for Shoppe on <%=Shoppe.settings.store_name%> is: <%=@user.pas
 
 You can login using your e-mail address.
 
-Thanks,
-
-The Built-in Shoppe Robot
+Thanks!
