removing customers, cleangin up order view

--- a/app/views/shoppe/orders/despatch_note.html.haml
+++ b/app/views/shoppe/orders/despatch_note.html.haml
@@ -9,7 +9,7 @@
     %p= @order.delivery_address1
     %p= @order.delivery_address2
     %p= @order.delivery_address3
-    %p= @order.delivery_address4
+    / %p= @order.delivery_address4
     %p= @order.delivery_postcode
     %p= @order.delivery_country.try(:name)
 
