--- a/app/views/shoppe/orders/_form.html.haml
+++ b/app/views/shoppe/orders/_form.html.haml
@@ -17,7 +17,7 @@
     %dd.space= f.text_field :billing_address1, :class => 'text'
     %dd.space= f.text_field :billing_address2, :class => 'text'
     %dd.space= f.text_field :billing_address3, :class => 'text'
-    %dd.space= f.text_field :billing_address4, :class => 'text'
+    / %dd.space= f.text_field :billing_address4, :class => 'text'
   .splitContainer
     %dl.half
       %dt= f.label :billing_postcode, t('shoppe.orders.post_code')
@@ -48,7 +48,7 @@
     %dd.space= f.text_field :delivery_address1, :class => 'text'
     %dd.space= f.text_field :delivery_address2, :class => 'text'
     %dd.space= f.text_field :delivery_address3, :class => 'text'
-    %dd.space= f.text_field :delivery_address4, :class => 'text'
+    / %dd.space= f.text_field :delivery_address4, :class => 'text'
   .splitContainer
     %dl.half
       %dt= f.label :delivery_postcode, t('shoppe.orders.post_code')
