--- a/app/views/shoppe/orders/_order_details.html.haml
+++ b/app/views/shoppe/orders/_order_details.html.haml
@@ -34,14 +34,14 @@
       %dd= @order.phone_number
       %dt= t('shoppe.orders.weight')
       %dd= number_to_weight @order.total_weight
-      - if @order.received?
-        %dt= t('shoppe.orders.build_time')
-        %dd= distance_of_time_in_words(@order.created_at, @order.received_at)
+      / - if @order.received?
+      /   %dt= t('shoppe.orders.build_time')
+      /   %dd= distance_of_time_in_words(@order.created_at, @order.received_at)
       - if @order.invoiced?
         %dt= t('shoppe.orders.invoice_number')
         %dd= @order.invoice_number
-      %dt= t('shoppe.orders.order_balance')
-      %dd= boolean_tag @order.paid_in_full?, nil, :true_text => number_to_currency(@order.balance), :false_text => number_to_currency(@order.balance)
+      / %dt= t('shoppe.orders.order_balance')
+      / %dd= boolean_tag @order.paid_in_full?, nil, :true_text => number_to_currency(@order.balance), :false_text => number_to_currency(@order.balance)
     - if @order.accepted? && !@order.shipped?
       = form_tag [:ship, @order] do
         %dl.form
